--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,8 @@ a {
       justify-content: space-around;
       transform: translateX(100%);
       transition: transform 0.3s ease-in;
-    }
+    } 
+    
     .nav-list li {
       margin-left: 0;
       opacity: 0;
@@ -270,4 +271,24 @@ a {
     color: #ffc506;
 }
 
+@media (max-width: 1200px) {
+    .main {
+        display: block;
+        
+    }
 
+    .sobre-nos img {
+        width: 600px;
+        margin-left: -2px;
+    }
+
+    
+}
+
+@media (max-width: 980px) {
+   
+    html {
+        font-size: 50%;
+    }
+    
+}
